# Plataforma-de-adquisicion-de-datos

./: PCB.rar
PCB/: DOIT Esp32 DevKit v1 (30 pins long, 11 pins width).fzpz  PCBv11_final.fzz
Programacion/Codigo arduino/: rawdata.ino
Programacion/Ros bag/: metadata.yaml  rosbag2_2025_11_21-14_54_13_0.mcap  rosbag2_2025_11_21-14_54_13_1.mcap
Solidworks/: Base.SLDPRT  BatteryHolder.SLDPRT  Contrapeso.SLDPRT  Esfera_abajo.SLDPRT  Esfera_arriba.SLDPRT  MPU9250.SLDPRT  PCB_base.SLDPRT  Porta-pilas_completa_ensamble.SLDASM  Porta-pilas_completa_parte.SLDPRT  Portapilas_base.SLDPRT
Solidworks/Dibujos/: Base.SLDDRW  Esfera_abajo.SLDDRW  Esfera_arriba.SLDDRW  MPU9250.SLDDRW  Porta-pilas.SLDDRW
ros2_ws/src/dm/: package.xml  setup.py
ros2_ws/src/dm/dm/: ras.py
