<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>dm</name>
  <version>0.0.2</version>
  <description>ROS 2 package for receiving, processing, and publishing MPU9250 sensor data via MQTT</description>
  <maintainer email="th3ruiz@example.com">th3ruiz</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>

  <!-- Optional: only needed if using OpenCV -->
  <depend>cv_bridge</depend>

  <!-- MQTT client library -->
  <exec_depend>paho-mqtt</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
